create messages screen

--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
 
 <body>
   <div id="root"></div>
-  <!-- https://source.unsplash.com/random/300x300/?person -->
   <script type="module" src="/src/main.tsx"></script>
 </body>
 
 </html>
+
+<!-- 
+  .connection--new {
+	position: relative;
+}
+.connection--new::after {
+	content: '';
+	position: absolute;
+	top: 50%;
+	right: 0;
+	transform: translateX(80%);
+
+	--new-connection-indicator-size: 20px;
+	width: var(--new-connection-indicator-size);
+	height: var(--new-connection-indicator-size);
+
+	background-color: red;
+}
+
+ -->
